# StreamlitResumeAI

./: .replit  app.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted--AI-Resume-Screening-System-With-1759674044808_1759674044809.txt
pages/: 1_Model_Training.py  2_Resume_Analysis.py  3_Batch_Processing.py  4_Visualizations.py
utils/: model_trainer.py  resume_processor.py  theme_helper.py  visualizations.py
